# mynequip_ext

./: .gitignore  pyproject.toml
configs/: spice_256.yaml  spice_64.yaml
examples/lmdb_dataset_conversion/: convert_all.sh  example_lmdb_conversion.py  h5py_to_extxyz.py  split.py
mynequip_ext/data/: __init__.py  ase.py
mynequip_ext/data/datamodule/: __init__.py  _dumped_ase_datamodule.py  _lmdb_datamodule.py  _mmap_datamodule.py
mynequip_ext/data/dataset/: __init__.py  _base_datasets.py  _dumped_ase_dataset.py  _mmap_dataset.py
mynequip_ext/scripts/: ase2nequipatomdatadict.py  deploy.py  split.py
mynequip_ext/train/: __init__.py  metrics_manager.py
mynequip_ext/train/callbacks/: __init__.py  gc.py
